--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -198,8 +198,11 @@ h2 a {
 <body>
     <h1><span class="blue"></span> <span class="yellow">Professor List (Alphabetical)</pan></h1>
         <h2> Fields related to Computer Science and engineering</h2>
+        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in a name">
+        <input type="text" id="myInput2" onkeyup="myFunction2()" placeholder="Search Interests" title="Type in a name">
+
         
-        <table class="container">
+        <table id="myTable"class="container">
             <thead>
                 <tr>
                     <th><h1 style="text-align:center">Name</h1></th>
@@ -265,8 +268,8 @@ h2 a {
                         <div class="dropdown">
                           <button class="dropbtn">Details</button>
                           <div class="dropdown-content">
-                            <a href="#" target="_blank">Profile</a>
-                            <a href="#" target="_blank">Google Scholar</a>
+                            <a href="https://iith.ac.in/~fahad/" target="_blank">Profile</a>
+                            <a href="https://scholar.google.no/citations?user=X6MthEgAAAAJ&hl=en" target="_blank">Google Scholar</a>
                           </div>
                         </div></td>
                 </tr>
@@ -279,8 +282,8 @@ h2 a {
                         <div class="dropdown">
                           <button class="dropbtn">Details</button>
                           <div class="dropdown-content">
-                            <a href="#" target="_blank">Profile</a>
-                            <a href="#" target="_blank">Google Scholar</a>
+                            <a href="https://www.iith.ac.in/~saketha/" target="_blank">Profile</a>
+                            <a href="https://www.iith.ac.in/~saketha/research.html" target="_blank">Google Scholar</a>
                           </div>
                         </div></td>
                 </tr>
@@ -293,8 +296,8 @@ h2 a {
                         <div class="dropdown">
                           <button class="dropbtn">Details</button>
                           <div class="dropdown-content">
-                            <a href="#" target="_blank">Profile</a>
-                            <a href="#" target="_blank">Google Scholar</a>
+                            <a href="https://jyothivedurada.github.io/" target="_blank">Profile</a>
+                            <a href="https://jyothivedurada.github.io/#research" target="_blank">Google Scholar</a>
                             <p></p>
                           </div>
                         </div></td>
@@ -308,8 +311,8 @@ h2 a {
                             <div class="dropdown">
                               <button class="dropbtn">Details</button>
                               <div class="dropdown-content">
-                                <a href="#" target="_blank">Profile</a>
-                                <a href="#" target="_blank">Google Scholar</a>
+                                <a href="https://www.iith.ac.in/~karteek/" target="_blank">Profile</a>
+                                <a href="https://dblp.org/pid/16/9960.html" target="_blank">Google Scholar</a>
                                 <p></p>
                               </div>
                             </div></td>
@@ -323,8 +326,8 @@ h2 a {
                                 <div class="dropdown">
                                   <button class="dropbtn">Details</button>
                                   <div class="dropdown-content">
-                                    <a href="#" target="_blank">Profile</a>
-                                    <a href="#" target="_blank">Google Scholar</a>
+                                    <a href="https://www.iith.ac.in/~kotaro/" target="_blank">Profile</a>
+                                    <a href="https://www.iith.ac.in/~kotaro/publication/" target="_blank">Google Scholar</a>
                                     <p></p>
                                   </div>
                                 </div></td>
@@ -338,7 +341,7 @@ h2 a {
                                     <div class="dropdown">
                                       <button class="dropbtn">Details</button>
                                       <div class="dropdown-content">
-                                        <a href="#" target="_blank">Profile</a>
+                                        <a href="https://www.iith.ac.in/~mvp/" target="_blank">Profile</a>
                                         <a href="#" target="_blank">Google Scholar</a>
                                         <p></p>
                                       </div>
@@ -353,8 +356,8 @@ h2 a {
                                         <div class="dropdown">
                                           <button class="dropbtn">Details</button>
                                           <div class="dropdown-content">
-                                            <a href="#" target="_blank">Profile</a>
-                                            <a href="#" target="_blank">Google Scholar</a>
+                                            <a href="https://www.iith.ac.in/~msingh/" target="_blank">Profile</a>
+                                            <a href="https://www.iith.ac.in/~msingh/research.html" target="_blank">Google Scholar</a>
                                             <p></p>
                                           </div>
                                         </div></td>
@@ -368,8 +371,8 @@ h2 a {
                                             <div class="dropdown">
                                               <button class="dropbtn">Details</button>
                                               <div class="dropdown-content">
-                                                <a href="#" target="_blank">Profile</a>
-                                                <a href="#" target="_blank">Google Scholar</a>
+                                                <a href="https://manukaul.github.io/" target="_blank">Profile</a>
+                                                <a href="https://manukaul.github.io/publications/" target="_blank">Google Scholar</a>
                                                 <p></p>
                                               </div>
                                             </div></td>
@@ -383,8 +386,8 @@ h2 a {
                                                 <div class="dropdown">
                                                   <button class="dropbtn">Details</button>
                                                   <div class="dropdown-content">
-                                                    <a href="#" target="_blank">Profile</a>
-                                                    <a href="#" target="_blank">Google Scholar</a>
+                                                    <a href="https://sites.google.com/view/maria-francis/home" target="_blank">Profile</a>
+                                                    <a href="https://sites.google.com/view/maria-francis/home#h.kb7xfosqcbda" target="_blank">Google Scholar</a>
                                                     <p></p>
                                                   </div>
                                                 </div></td>
@@ -398,8 +401,8 @@ h2 a {
                                                     <div class="dropdown">
                                                       <button class="dropbtn">Details</button>
                                                       <div class="dropdown-content">
-                                                        <a href="#" target="_blank">Profile</a>
-                                                        <a href="#" target="_blank">Google Scholar</a>
+                                                        <a href="https://www.iith.ac.in/~maunendra/" target="_blank">Profile</a>
+                                                        <a href="https://www.iith.ac.in/~maunendra/research.html" target="_blank">Google Scholar</a>
                                                         <p></p>
                                                       </div>
                                                     </div></td>
@@ -413,8 +416,8 @@ h2 a {
                                                         <div class="dropdown">
                                                           <button class="dropbtn">Details</button>
                                                           <div class="dropdown-content">
-                                                            <a href="#" target="_blank">Profile</a>
-                                                            <a href="#" target="_blank">Google Scholar</a>
+                                                            <a href="https://www.iith.ac.in/~aravind/" target="_blank">Profile</a>
+                                                            <a href="https://www.iith.ac.in/~aravind/research.html" target="_blank">Google Scholar</a>
                                                             <p></p>
                                                           </div>
                                                         </div></td>
@@ -428,8 +431,8 @@ h2 a {
                                                             <div class="dropdown">
                                                               <button class="dropbtn">Details</button>
                                                               <div class="dropdown-content">
-                                                                <a href="#" target="_blank">Profile</a>
-                                                                <a href="#" target="_blank">Google Scholar</a>
+                                                                <a href="https://praveenabt.github.io/" target="_blank">Profile</a>
+                                                                <a href="https://scholar.google.com/citations?user=ZCukcP4AAAAJ&hl=en" target="_blank">Google Scholar</a>
                                                                 <p></p>
                                                               </div>
                                                             </div></td>
@@ -443,8 +446,8 @@ h2 a {
                                                                 <div class="dropdown">
                                                                   <button class="dropbtn">Details</button>
                                                                   <div class="dropdown-content">
-                                                                    <a href="#" target="_blank">Profile</a>
-                                                                    <a href="#" target="_blank">Google Scholar</a>
+                                                                    <a href="https://www.iith.ac.in/~rakeshvenkat/" target="_blank">Profile</a>
+                                                                    <a href="https://www.iith.ac.in/~rakeshvenkat/#AcademicsResearch" target="_blank">Google Scholar</a>
                                                                     <p></p>
                                                                   </div>
                                                                 </div></td>
@@ -458,8 +461,8 @@ h2 a {
                                                                   <div class="dropdown">
                                                                     <button class="dropbtn">Details</button>
                                                                     <div class="dropdown-content">
-                                                                      <a href="#" target="_blank">Profile</a>
-                                                                      <a href="#" target="_blank">Google Scholar</a>
+                                                                      <a href="https://iith.ac.in/~rogers/" target="_blank">Profile</a>
+                                                                      <a href="https://scholar.google.ca/citations?hl=en&user=-euQnQYAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a>
                                                                       <p></p>
                                                                     </div>
                                                                   </div></td>
@@ -473,8 +476,8 @@ h2 a {
                                                                     <div class="dropdown">
                                                                       <button class="dropbtn">Details</button>
                                                                       <div class="dropdown-content">
-                                                                        <a href="#" target="_blank">Profile</a>
-                                                                        <a href="#" target="_blank">Google Scholar</a>
+                                                                        <a href="https://www.iith.ac.in/~sathya_p/" target="_blank">Profile</a>
+                                                                        <a href="http://www.iith.ac.in/~sathya_p/index_files/Publications.html" target="_blank">Google Scholar</a>
                                                                         <p></p>
                                                                       </div>
                                                                     </div></td>
@@ -488,8 +491,8 @@ h2 a {
                                                                       <div class="dropdown">
                                                                         <button class="dropbtn">Details</button>
                                                                         <div class="dropdown-content">
-                                                                          <a href="#" target="_blank">Profile</a>
-                                                                        <a href="#" target="_blank">Google Scholar</a>
+                                                                          <a href="https://sbjoshi.github.io/" target="_blank">Profile</a>
+                                                                        <a href="https://scholar.google.com/citations?user=MvHEGbYAAAAJ" target="_blank">Google Scholar</a>
 
                                                                           <p></p>
                                                                         </div>
@@ -504,8 +507,8 @@ h2 a {
                                                                         <div class="dropdown">
                                                                           <button class="dropbtn">Details</button>
                                                                           <div class="dropdown-content">
-                                                                            <a href="#" target="_blank">Profile</a>
-                                                                        <a href="#" target="_blank">Google Scholar</a>
+                                                                            <a href="https://www.iith.ac.in/~sobhan/" target="_blank">Profile</a>
+                                                                        <a href="https://www.iith.ac.in/~sobhan/" target="_blank">Google Scholar</a>
 
                                                                             <p></p>
                                                                           </div>
@@ -519,8 +522,8 @@ h2 a {
                                                                           <div class="dropdown">
                                                                             <button class="dropbtn">Details</button>
                                                                             <div class="dropdown-content">
-                                                                              <a href="#" target="_blank">Profile</a>
-                                                                        <a href="#" target="_blank">Google Scholar</a>
+                                                                              <a href="https://sites.google.com/site/pksrijith/home" target="_blank">Profile</a>
+                                                                        <a href="https://sites.google.com/site/pksrijith/publications" target="_blank">Google Scholar</a>
 
                                                                               <p></p>
                                                                             </div>
@@ -535,8 +538,8 @@ h2 a {
                                                                             <div class="dropdown">
                                                                               <button class="dropbtn">Details</button>
                                                                               <div class="dropdown-content">
-                                                                                <a href="#" target="_blank">Profile</a>
-                                                                        <a href="#" target="_blank">Google Scholar</a>
+                                                                                <a href="https://www.iith.ac.in/~vineethnb/index.html" target="_blank">Profile</a>
+                                                                        <a href="https://www.iith.ac.in/~vineethnb/pubs.html" target="_blank">Google Scholar</a>
 
                                                                                 <p></p>
                                                                               </div>
@@ -547,6 +550,46 @@ h2 a {
 
             </tbody>
         </table>
+        <script>
+            function myFunction() {
+              var input, filter, table, tr, td, i, txtValue;
+              input = document.getElementById("myInput");
+              filter = input.value.toUpperCase();
+              table = document.getElementById("myTable");
+              tr = table.getElementsByTagName("tr");
+              for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[0];
+                if (td) {
+                  txtValue = td.textContent || td.innerText;
+                  if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = "";
+                  } else {
+                    tr[i].style.display = "none";
+                  }
+                }       
+              }
+            }
+            </script>
+            <script>
+              function myFunction2() {
+                var input, filter, table, tr, td, i, txtValue;
+                input = document.getElementById("myInput2");
+                filter = input.value.toUpperCase();
+                table = document.getElementById("myTable");
+                tr = table.getElementsByTagName("tr");
+                for (i = 0; i < tr.length; i++) {
+                  td = tr[i].getElementsByTagName("td")[3];
+                  if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                      tr[i].style.display = "";
+                    } else {
+                      tr[i].style.display = "none";
+                    }
+                  }       
+                }
+              }
+              </script>
   
 
         
