--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -22,6 +22,60 @@ body {
   background-color:#1F2739;
 }
 
+.search-box{
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+}
+.input-search{
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all .5s ease-in-out;
+  background-color: #22a6b3;
+  padding-right: 40px;
+  color:#fff;
+}
+.input-search::placeholder{
+  color:rgba(255,255,255,.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.btn-search{
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color:#ffffff ;
+  background-color:transparent;
+  pointer-events: painted;  
+}
+.btn-search:focus ~ .input-search{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+.input-search:focus{
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
 h1 {
   font-size:3em; 
   font-weight: 300;
@@ -198,8 +252,12 @@ h2 a {
 <body>
     <h1><span class="blue"></span> <span class="yellow">Professor List (Alphabetical)</pan></h1>
         <h2> Fields related to Computer Science and engineering</h2>
-        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in a name">
-        <input type="text" id="myInput2" onkeyup="myFunction2()" placeholder="Search Interests" title="Type in a name">
+        <div class="search-box">
+          <button class="btn-search"><i class="fas fa-search"></i></button>
+        <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in a name">
+        <input type="text" id="myInput2" class="input-search" onkeyup="myFunction2()" placeholder="Search Interests" title="Type in a name">
+      </div>
+
 
         
         <table id="myTable"class="container">
