IIT DHARWAD ADDED TO CSE

--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -603,6 +603,155 @@ h2 a {
                                                                               </div>
                                                                             </div></td>
                                                                     </tr>
+                                                                    <tr>
+                                                                      <td>GAYATHRI ANANTHANARAYANAN</td>
+                                                                      <td>IIT DHARWAD</td>
+                                                                      <td>CSE</td>
+                                                                      <td>Computer architecture and embedded systems, with specific focus on Power, Thermal and Performance modeling, characterization and management.</td>
+                                                                        <td>
+                                                                            <div class="dropdown">
+                                                                  <button class="dropbtn">Details</button>
+                                                                  <div class="dropdown-content">
+                                                                    <a href="https://www.cse.iitd.ac.in/~gayathri/index.html" target="_blank">Profile</a>
+                                                                    <a href="https://www.cse.iitd.ac.in/~gayathri/pubs.html" target="_blank">Publication Link</a>
+                                                                  </div>
+                                                                  </div>
+                                                              </td>
+                                                                        
+                                                                    </tr>
+                                                                    <tr>
+                                                                      <td>Kedar Khandeparkar</td>
+                                                                      <td>IIT DHARWAD</td>
+                                                                      <td>CSE</td>
+                                                                      <td>Cyber Physical Systems, Data Science and Cyber Security in Smart Grids, Applied Machine Learning</td>
+                                                                        <td>
+                                                                            <div class="dropdown">
+                                                                  <button class="dropbtn">Details</button>
+                                                                  <div class="dropdown-content">
+                                                                    <a href="https://www.iitdh.ac.in/~kedark/" target="_blank">Profile</a>
+                                                                    <a href="https://www.iitdh.ac.in/~kedark/publications.html" target="_blank">Publication Link</a>
+                                                                  </div>
+                                                                  </div>
+                                                              </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                      <td>Koteswararao Kondepu</td>
+                                                    <td>IIT DHARWAD</td>
+                                                    <td>CSE</td>
+                                                    <td>N/A</td>
+                                                                        <td>
+                                                                            <div class="dropdown">
+                                                                              <button class="dropbtn">Details</button>
+                                                                              <div class="dropdown-content">
+                                                                                <a href="https://www.iith.ac.in/~tbr/" target="_blank">Profile</a>
+                                                                                <a href="https://scholar.google.com/citations?user=X-yZFQkAAAAJ&hl=en" target="_blank">Publication Link</a>
+                                                                              </div>
+                                                                            </div>
+                                                              </td>
+                                                                    </tr>
+                                                                <tr>
+                                                                  <td>Nikhil Hegde</td>
+                                                                  <td>IIT DHARWAD</td>
+                                                                  <td>CSE</td>
+                                                                  <td> Parallel and Distributed computing, and Programming Languages</td>
+                                                                        <td>
+                                                                            <div class="dropdown">
+                                                                              <button class="dropbtn">Details</button>
+                                                                              <div class="dropdown-content">
+                                                                                <a href="https://hegden.github.io/" target="_blank">Profile</a>
+                                                                                <a href="https://hegden.github.io/research/" target="_blank">Publication Link</a>
+                                                                              </div>
+                                                                            </div></td>
+                                                                    </tr>
+                                                                <tr>
+                                                                  <td>Prabuchandran K.J.</td>
+                                                                  <td>IIT DHARWAD</td>
+                                                                  <td>CSE</td>
+                                                                  <td>N/A</td>
+                                                                        <td>
+                                                                            <div class="dropdown">
+                                                                              <button class="dropbtn">Details</button>
+                                                                              <div class="dropdown-content">
+                                                                                <a href="https://scholar.google.com/citations?user=JSL--pMAAAAJ&hl=en" target="_blank">Profile</a>
+                                                                                <a href="https://scholar.google.com/citations?user=JSL--pMAAAAJ&hl=en" target="_blank">Publication Link</a>
+                                                                              </div>
+                                                                            </div></td>
+                                                                    </tr>
+                                                                <tr>
+                                                                  <td>Rajshekar K</td>
+                                                    <td>IIT DHARWAD</td>
+                                                    <td>CSE</td>
+                                                    <td>Computer architecture, hardware reliability, hardware security, accountability issues in heterogeneous 3PIP-containing SOCs, and microarchitectural simulation.</td>
+                                                                        <td>
+                                                                            <div class="dropdown">
+                                                                              <button class="dropbtn">Details</button>
+                                                                              <div class="dropdown-content">
+                                                                                <a href="https://iitdh.ac.in/rajshekar.k/" target="_blank">Profile</a>
+                                                                                <a href="https://iitdh.ac.in/rajshekar.k/" target="_blank">Publication Link</a>
+                                                                                <p></p>
+                                                                              </div>
+                                                                            </div></td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                      <td>Ramchandra Phawade</td>
+                                                                      <td>IIT DHARWAD</td>
+                                                                      <td>CSE</td>
+                                                                      <td>Concurrency, Automata Theory and Logic in Computer Science</td>
+                                                                            <td>
+                                                                                <div class="dropdown">
+                                                                                  <button class="dropbtn">Details</button>
+                                                                                  <div class="dropdown-content">
+                                                                                    <a href="https://iitdh.ac.in/prb/" target="_blank">Profile</a>
+                                                                                    <a href="https://dblp.org/pid/16/9960.html" target="_blank">Publication Link</a>
+                                                                                    <p></p>
+                                                                                  </div>
+                                                                                </div></td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                          <td>Sandeep R. B.</td>
+                                                    <td>IIT DHARWAD</td>
+                                                    <td>CSE</td>
+                                                    <td>Graph Theory and Algorithms</td>
+                                                                                <td>
+                                                                                    <div class="dropdown">
+                                                                                      <button class="dropbtn">Details</button>
+                                                                                      <div class="dropdown-content">
+                                                                                        <a href="https://iitdh.ac.in/rajshekar.k/" target="_blank">Profile</a>
+                                                                                        <a href="https://iitdh.ac.in/rajshekar.k/publications.html" target="_blank">Publication Lin</a>
+                                                                                        <p></p>
+                                                                                      </div>
+                                                                                    </div></td>
+                                                                            </tr>
+                                                                            <tr>
+                                                                              <td>Siba Narayan</td>
+                                                    <td>IIT DHARWAD</td>
+                                                    <td>CSE</td>
+                                                    <td>Efficient radio resource and device discovery algorithms for enabling Device-to-Device Communications in LTE-A Networks.</td>
+                                                                                    <td>
+                                                                                        <div class="dropdown">
+                                                                                          <button class="dropbtn">Details</button>
+                                                                                          <div class="dropdown-content">
+                                                                                            <a href="https://shivanarayan06.wixsite.com/website" target="_blank">Profile</a>
+                                                                                            <a href="https://shivanarayan06.wixsite.com/website/publications" target="_blank">Publication Link</a>
+                                                                                            <p></p>
+                                                                                          </div>
+                                                                                        </div></td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                  <td>Tamal Das</td>
+                                                    <td>IIT DHARWAD</td>
+                                                    <td>CSE</td>
+                                                    <td>Software defined networking ,Data center network architectures,Network function virtualization,Network Migration,High-speed networks</td>
+                                                                                        <td>
+                                                                                            <div class="dropdown">
+                                                                                              <button class="dropbtn">Details</button>
+                                                                                              <div class="dropdown-content">
+                                                                                                <a href="https://sites.google.com/view/dtamal" target="_blank">Profile</a>
+                                                                                                <a href="https://sites.google.com/view/dtamal/research?authuser=0" target="_blank">Publication Link</a>
+                                                                                                <p></p>
+                                                                                              </div>
+                                                                                            </div></td>
+                                                                                    </tr>
     
   
 
