--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -254,8 +254,8 @@ h2 a {
         <h2> Fields related to Computer Science and engineering</h2>
         <div class="search-box">
           <button class="btn-search"><i class="fas fa-search"></i></button>
-        <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in a name">
-        <input type="text" id="myInput2" class="input-search" onkeyup="myFunction2()" placeholder="Search Interests" title="Type in a name">
+        <input type="text" id="myInput" class="input-search" onkeyup="myFunction()" placeholder="Search By Professor Name" title="Type in Professor Name">
+        <input type="text" id="myInput2" class="input-search" onkeyup="myFunction2()" placeholder="Search Interests" title="Type Interests ">
       </div>
 
 
